# TinySSG

./: .gitignore  README.md  README_jp.md  pyproject.toml
tinyssg/: __init__.py  __main__.py
